2001-07-25  Jason Merrill  <jason_merrill@redhat.com>

	PR c++/3529
	Copied from mainline.
	* cvt.c (convert_lvalue): New fn.
	* cp-tree.h: Declare it.
	* method.c (do_build_assign_ref): Use it.
        (do_build_copy_constructor): Convert parm to base types
	before calling base constructors.

2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/3543
	* typeck.c (condition_conversion): Resolve an OFFSET_REF.
	* expr.c (cplus_expand_expr): An OFFSET_REF should never get here.

2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>

	* class.c (build_vbase_offset_vbtl_entries): Look for
	non-primary base of which we are a sub vtable.

2001-07-20  Daniel Berlin  <dan@cgsoftware.com>

	* Make-lang.in (cp/optimize.o): Depend on $(PARAMS_H), not
	params.h.

2001-07-18  Xavier Delacour <xavier@fmaudio.net>,
            Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* NEWS (Changes in GCC 3.0): Fix typo.

2001-07-12  Mark Mitchell  <mark@codesourcery.com>

	* decl.c (make_rtl_for_nonlocal_decl): Set DECL_C_HARD_REGISTER
	for `register' variables with an asm-specification.

2001-07-11  Mark Mitchell  <mark@codesourcery.com>

	* semantics.c (finish_asm_stmt): Mark the output operands
	to an asm addressable, if necessary.

2001-07-10  Mark Mitchell  <mark@codesourcery.com>

	* pt.c (tsubst_decl): Set DECL_CONTEXT for namespace-scope
	variables.

2001-06-19  Richard Sandiford  <rsandifo@redhat.com>

	* except.c (initialize_handler_parm): Expect __cxa_begin_catch to
	return pointers to data members by reference rather than by value.

2001-06-18  Jason Merrill  <jason_merrill@redhat.com>

	* class.c (dfs_accumulate_vtbl_inits): Just point to the base we're
	sharing a ctor vtable with.  Merge code for cases 1 and 2.
	(binfo_ctor_vtable): New fn.
	(build_vtt_inits, dfs_build_secondary_vptr_vtt_inits): Use it.

	* class.c (dfs_find_final_overrider): Fix logic.

	* pt.c (unify): Don't recurse between the POINTER_TYPE and the