@@ -1,3 +1,7 @@
+2001-07-25  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.other/cond7.C: New test.
+
 2001-07-25  Jason Merrill  <jason_merrill@redhat.com>
 
 	Copied from mainline.
